--- a/SambalpurAndroidApp/app/src/main/res/drawable/rounder_rectangle.xml
+++ b/SambalpurAndroidApp/app/src/main/res/drawable/rounder_rectangle.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="@color/home_rect_end_color"
-        android:startColor="@color/home_rect_start_color"
+        android:endColor="@color/darkBlack"
+        android:startColor="@color/content_dark_grey"
         android:angle="270" />
     <!--<corners-->
         <!--android:radius="25dp" />-->
