--- a/SambalpurAndroidApp/app/src/main/res/values/styles.xml
+++ b/SambalpurAndroidApp/app/src/main/res/values/styles.xml
@@ -73,4 +73,9 @@
         <item name="android:gravity">left</item>
     </style>
 
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
