--- a/SambalpurAndroidApp/app/src/main/res/layout/individual_shop_list.xml
+++ b/SambalpurAndroidApp/app/src/main/res/layout/individual_shop_list.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp">
             <ImageView
-                android:id="@+id/img_festival_icon"
+                android:id="@+id/img_shop_icon"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:src="@mipmap/ic_launcher"/>
@@ -23,21 +23,28 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="5dp">
                 <TextView
-                    android:id="@+id/txt_festival_heading"
+                    android:id="@+id/txt_shop_heading"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/darkBlue"
                     android:text="Festival Name"
                     style="@style/ListHeading"
                     android:padding="5dp"/>
-                <TextView
-                    android:id="@+id/txt_festival_caption"
+               <!-- <TextView
+                    android:id="@+id/txt_shop_caption"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Festival caption"
                     style="@style/ListContent"
                     android:padding="5dp"
-                    android:layout_below="@+id/txt_festival_heading"/>
+                    android:layout_below="@+id/txt_festival_heading"/>-->
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:id="@+id/ratingBar"
+                    android:numStars="5"
+                    android:rating="5"/>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
