--- a/SambalpurAndroidApp/app/src/main/res/layout/individual_shop_item.xml
+++ b/SambalpurAndroidApp/app/src/main/res/layout/individual_shop_item.xml
@@ -30,19 +30,22 @@
                     android:text="Festival Name"
                     style="@style/ListHeading"
                     android:padding="5dp"/>
-               <!-- <TextView
+                <TextView
                     android:id="@+id/txt_shop_caption"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Festival caption"
                     style="@style/ListContent"
                     android:padding="5dp"
-                    android:layout_below="@+id/txt_festival_heading"/>-->
+                    android:layout_below="@+id/txt_festival_heading"/>
 
                 <RatingBar
+                    android:layout_margin="5dp"
+                    style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/ratingBar"
+                    android:isIndicator="false"
                     android:numStars="5"
                     android:rating="5"/>
             </LinearLayout>
