--- a/SambalpurAndroidApp/app/src/main/res/layout/listview_activity.xml
+++ b/SambalpurAndroidApp/app/src/main/res/layout/listview_activity.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:background="@color/content_dark_grey">
         <ListView
-            android:id="@+id/festival_list"
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
